Minimun height to ensure button shows on smaller screens

--- a/app/assets/stylesheets/pages/users_home.scss
+++ b/app/assets/stylesheets/pages/users_home.scss
@@ -10,6 +10,7 @@
     flex-direction: column;
     height: 100vh;
     padding: 0;
+    min-height: 950px;
   }
 
   .row {
